# pydantic-argparse-extensible

./: .coverage  README.md  flake.nix  pyproject.toml
.github/: labeler.yml
.github/workflows/: release.yml  version.yml
argparse_pydantic/: __init__.py
nix/: makePackages.nix
pydantic_argparse_extensible/: __init__.py
tests/: example_simple.py  test_bool.py  test_default.py  test_default_factory.py  test_default_missing_attr.py  test_help.py  test_manual.py  test_nested.py  test_path.py  test_required.py  test_str.py  test_union.py
tests/__snapshots__/: test_help.ambr  test_manual.ambr  test_nested.ambr  test_required.ambr  test_str.ambr  test_union.ambr
